--- a/_posts/2025-09-12-华中农业大学研发双驱动大模型 助力农业政策评估智能化发展.md
+++ b/_posts/2025-09-12-华中农业大学研发双驱动大模型 助力农业政策评估智能化发展.md
@@ -1,6 +1,6 @@
 ---
 title: 华中农业大学研发双驱动大模型 助力农业政策评估智能化发展
-author: 刘延清[中国日报网](http://www.news.cn/app/20250912/58353901a31048a49ea5dee39dae44c4/c.html) 
+author: 刘延清
 tags:
   - 大模型
   - 农业政策评估
